syntax = "proto2";

package process;

option java_package = "project.grpc.process";
option java_outer_classname = "ProcessProto";

// gRPC service for the Process API
service ProcessService {
  rpc Read (ReadRequest) returns (ReadResponse);
  rpc Write (WriteRequest) returns (WriteResponse);
}

// -------- READ --------

message ReadRequest {
  string sourcePointer = 1;
}

message ReadResponse {
  repeated int32 values = 1;
}

// -------- WRITE --------

enum StatusCode {
  SUCCESS = 0;
  FAILURE = 1;
}

message WriteRequest {
  string destinationPointer = 1;
  string payload = 2;
}

message WriteResponse {
  StatusCode code = 1;
  string message = 2;
}
